--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
+ <header class="hero">
+  <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
+  <div class="hero-text">
     <p>Alquila tu propiedad sin complicaciones. Fácil, rentable y sin preocupaciones.</p>
     <a href="#propietarios" class="btn">Soy propietario</a>
-  </header>
+  </div>
+</header>
 
   <section id="como-funciona">
     <h2>¿Cómo funciona?</h2>
