--- a/index.html
+++ b/index.html
@@ -34,6 +34,45 @@
     </ul>
   </section>
 
+  <section id="ventajas">
+  <h2>¿Por qué elegirnos?</h2>
+  <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-mini" />
+
+  <div class="ventajas-grid">
+    <div class="ventaja">
+      <span>🛠</span>
+      <h3>Servicio de reparaciones</h3>
+      <p>En Bairoom contamos con un equipo que resuelve cualquier incidente en menos de 24h. Todo corre por nuestra cuenta.</p>
+    </div>
+    <div class="ventaja">
+      <span>🔊</span>
+      <h3>Control de ruido</h3>
+      <p>Instalamos Roomonitor en cada habitación para controlar los niveles de ruido 24/7 y evitar conflictos con la comunidad.</p>
+    </div>
+    <div class="ventaja">
+      <span>⏰</span>
+      <h3>Ahorro de tiempo</h3>
+      <p>Nos encargamos de todo. Tú solo cobras entre los días 1-5 de cada mes sin preocuparte por nada.</p>
+    </div>
+    <div class="ventaja">
+      <span>💰</span>
+      <h3>Seguridad en los pagos</h3>
+      <p>Te facilitamos la documentación para seguros de impago y, si lo necesitas, añadimos meses extra de depósito o fianza.</p>
+    </div>
+    <div class="ventaja">
+      <span>📈</span>
+      <h3>Revalorización del hogar</h3>
+      <p>Invertimos en tu propiedad: reformamos, pintamos o mejoramos lo necesario para aumentar su valor — sin coste para ti.</p>
+    </div>
+    <div class="ventaja">
+      <span>🧼</span>
+      <h3>Servicio de limpieza</h3>
+      <p>Acudimos semanalmente a limpiar y revisar el estado del inmueble, enviándote vídeos si lo deseas.</p>
+    </div>
+  </div>
+</section>
+
+
   <footer>
     <p>© 2025 Bairoom | Contacto: <a href="mailto:jesusbailensanchez@gmail.com">jesusbailensanchez@gmail.com</a></p>
   </footer>
