--- a/index.html
+++ b/index.html
@@ -40,38 +40,54 @@
 
   <div class="ventajas-grid">
     <div class="ventaja">
-      <span>🛠</span>
-      <h3>Servicio de reparaciones</h3>
-      <p>En Bairoom contamos con un equipo que resuelve cualquier incidente en menos de 24h. Todo corre por nuestra cuenta.</p>
+      <img src="icons/reparaciones.svg" alt="Icono reparaciones" />
+      <div>
+        <h3>Servicio de reparaciones</h3>
+        <p>Contamos con técnicos especializados que acuden en menos de 24h. Todo corre por nuestra cuenta.</p>
+      </div>
     </div>
+
     <div class="ventaja">
-      <span>🔊</span>
-      <h3>Control de ruido</h3>
-      <p>Instalamos Roomonitor en cada habitación para controlar los niveles de ruido 24/7 y evitar conflictos con la comunidad.</p>
+      <img src="icons/ruido.svg" alt="Icono ruido" />
+      <div>
+        <h3>Control de ruido</h3>
+        <p>Instalamos dispositivos Roomonitor que controlan los niveles de ruido 24/7 en cada estancia.</p>
+      </div>
     </div>
+
     <div class="ventaja">
-      <span>⏰</span>
-      <h3>Ahorro de tiempo</h3>
-      <p>Nos encargamos de todo. Tú solo cobras entre los días 1-5 de cada mes sin preocuparte por nada.</p>
+      <img src="icons/tiempo.svg" alt="Icono tiempo" />
+      <div>
+        <h3>Ahorro de tiempo</h3>
+        <p>Nos ocupamos de todo tipo de incidencias. Tú solo cobras la renta mensual, sin preocupaciones.</p>
+      </div>
     </div>
+
     <div class="ventaja">
-      <span>💰</span>
-      <h3>Seguridad en los pagos</h3>
-      <p>Te facilitamos la documentación para seguros de impago y, si lo necesitas, añadimos meses extra de depósito o fianza.</p>
+      <img src="icons/seguridad.svg" alt="Icono seguridad pagos" />
+      <div>
+        <h3>Seguridad en los pagos</h3>
+        <p>Tramitamos seguros de impago. Incluso podemos adelantar meses de fianza o depósito si se necesita.</p>
+      </div>
     </div>
+
     <div class="ventaja">
-      <span>📈</span>
-      <h3>Revalorización del hogar</h3>
-      <p>Invertimos en tu propiedad: reformamos, pintamos o mejoramos lo necesario para aumentar su valor — sin coste para ti.</p>
+      <img src="icons/revalorizacion.svg" alt="Icono revalorización" />
+      <div>
+        <h3>Revalorización del hogar</h3>
+        <p>Invertimos en tu propiedad: reformas, pintura, tarimas... lo que necesites para aumentar su valor.</p>
+      </div>
     </div>
+
     <div class="ventaja">
-      <span>🧼</span>
-      <h3>Servicio de limpieza</h3>
-      <p>Acudimos semanalmente a limpiar y revisar el estado del inmueble, enviándote vídeos si lo deseas.</p>
+      <img src="icons/limpieza.svg" alt="Icono limpieza" />
+      <div>
+        <h3>Servicio de limpieza</h3>
+        <p>Una persona acude semanalmente y puede enviarte vídeos del estado de la vivienda si lo deseas.</p>
+      </div>
     </div>
   </div>
 </section>
-
 
   <footer>
     <p>© 2025 Bairoom | Contacto: <a href="mailto:jesusbailensanchez@gmail.com">jesusbailensanchez@gmail.com</a></p>
