--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="ventajas-grid">
     <div class="ventaja">
-      <img src="icons/reparaciones.svg" alt="Icono reparaciones" />
+      <img src="icons/reparaciones.png" alt="Icono reparaciones" />
       <div>
         <h3>Servicio de reparaciones</h3>
         <p>Contamos con técnicos especializados que acuden en menos de 24h. Todo corre por nuestra cuenta.</p>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="ventaja">
-      <img src="icons/ruido.svg" alt="Icono ruido" />
+      <img src="icons/ruido.png" alt="Icono ruido" />
       <div>
         <h3>Control de ruido</h3>
         <p>Instalamos dispositivos Roomonitor que controlan los niveles de ruido 24/7 en cada estancia.</p>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="ventaja">
-      <img src="icons/tiempo.svg" alt="Icono tiempo" />
+      <img src="icons/tiempo.png" alt="Icono tiempo" />
       <div>
         <h3>Ahorro de tiempo</h3>
         <p>Nos ocupamos de todo tipo de incidencias. Tú solo cobras la renta mensual, sin preocupaciones.</p>
@@ -64,7 +64,7 @@
     </div>
 
     <div class="ventaja">
-      <img src="icons/seguridad.svg" alt="Icono seguridad pagos" />
+      <img src="icons/pagos.png" alt="Icono seguridad pagos" />
       <div>
         <h3>Seguridad en los pagos</h3>
         <p>Tramitamos seguros de impago. Incluso podemos adelantar meses de fianza o depósito si se necesita.</p>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="ventaja">
-      <img src="icons/revalorizacion.svg" alt="Icono revalorización" />
+      <img src="icons/revalorizacion.png" alt="Icono revalorización" />
       <div>
         <h3>Revalorización del hogar</h3>
         <p>Invertimos en tu propiedad: reformas, pintura, tarimas... lo que necesites para aumentar su valor.</p>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="ventaja">
-      <img src="icons/limpieza.svg" alt="Icono limpieza" />
+      <img src="icons/limpio.png" alt="Icono limpieza" />
       <div>
         <h3>Servicio de limpieza</h3>
         <p>Una persona acude semanalmente y puede enviarte vídeos del estado de la vivienda si lo deseas.</p>
@@ -88,6 +88,7 @@
     </div>
   </div>
 </section>
+
 
   <footer>
     <p>© 2025 Bairoom | Contacto: <a href="mailto:jesusbailensanchez@gmail.com">jesusbailensanchez@gmail.com</a></p>
