--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
       <li>✔ Selección de inquilinos cualificados</li>
     </ul>
   </section>
+<section id="inquilino-perfecto" class="banner">
+  <div class="banner-content">
+    <div class="texto">
+      <h2>ALQUILA TU VIVIENDA SIN PREOCUPACIONES</h2>
+      <hr />
+      <p><strong>Seremos tu inquilino perfecto.</strong></p>
+      <p>
+        Nos hacemos cargo de todas las reparaciones, te aseguramos el pago por ADELANTADO de la mensualidad,
+        entre otras muchísimas más ventajas.
+      </p>
+      <a href="#contacto" class="btn btn-claro">CONTÁCTANOS</a>
+    </div>
+    <div class="imagen">
+      <img src="foto-habitacion.jpg" alt="Habitación moderna gestionada por Bairoom" />
+    </div>
+  </div>
+</section>
 
   <section id="ventajas">
     <h2>¿Por qué elegirnos?</h2>
