--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>Bairoom - Alquiler sin complicaciones</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  <nav class="navbar">
+  <div class="nav-container">
+    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
+    <ul class="nav-links">
+      <li><a href="#contacto">Se anfitrión</a></li>
+      <li><a href="#ventajas">Por qué Bairoom</a></li>
+      <li><a href="#propiedades">Viviendas gestionadas</a></li>
+    </ul>
+  </div>
+</nav>
 <body>
   <header class="hero">
     <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
