--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
   <title>Bairoom - Alquiler sin complicaciones</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  <nav class="navbar">
-  <div class="nav-container">
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
-    <ul class="nav-links">
-      <li><a href="#contacto">Se anfitrión</a></li>
-      <li><a href="#ventajas">Por qué Bairoom</a></li>
-      <li><a href="#propiedades">Viviendas gestionadas</a></li>
-    </ul>
-  </div>
-</nav>
 <body>
+
+  <!-- CABECERA NAV -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
+      <ul class="nav-links">
+        <li><a href="#contacto">SE ANFITRIÓN</a></li>
+        <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
+        <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- HEADER -->
   <header class="hero">
     <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
     <div class="hero-text">
-      <p>Alquila tu propiedad sin complicaciones. Fácil, rentable y sin preocupaciones.</p>
       <a href="#propietarios" class="btn">Soy propietario</a>
     </div>
   </header>
