--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bairoom - Alquiler sin complicaciones</title>
+  <title>BAIROOM</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- CABECERA NAV -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
-      <ul class="nav-links">
-        <li><a href="#contacto">SE ANFITRIÓN</a></li>
-        <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
-        <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
-      </ul>
-    </div>
-  </nav>
-
+<nav class="navbar">
+  <div class="nav-container">
+    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
+    <ul class="nav-links">
+      <li><a href="#contacto">SE ANFITRIÓN</a></li>
+      <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
+      <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
+    </ul>
+  </div>
+</nav>
   <!-- HEADER -->
   <header class="hero">
     <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
@@ -28,24 +27,6 @@
     </div>
   </header>
 
-  <section id="como-funciona">
-    <h2>¿Cómo funciona?</h2>
-    <ol>
-      <li>📍 Encuentra tu zona</li>
-      <li>📞 Contacta</li>
-      <li>📄 Firmamos</li>
-      <li>🏠 Alquila y despreocúpate</li>
-    </ol>
-  </section>
-
-  <section id="beneficios">
-    <h2>Ventajas para propietarios</h2>
-    <ul>
-      <li>✔ Ingresos garantizados</li>
-      <li>✔ Cero gestión, cero dolores de cabeza</li>
-      <li>✔ Selección de inquilinos cualificados</li>
-    </ul>
-  </section>
 <section id="inquilino-perfecto" class="banner">
   <div class="banner-content">
     <div class="texto">
