--- a/index.html
+++ b/index.html
@@ -9,23 +9,16 @@
 <body>
 
   <!-- CABECERA NAV -->
-<nav class="navbar">
-  <div class="nav-container">
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
-    <ul class="nav-links">
-      <li><a href="#contacto">SE ANFITRIÓN</a></li>
-      <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
-      <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
-    </ul>
-  </div>
-</nav>
-  <!-- HEADER -->
-  <header class="hero">
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
-    <div class="hero-text">
-      <a href="#propietarios" class="btn">Soy propietario</a>
-    </div>
-  </header>
+<div class="nav-container">
+  <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
+  <ul class="nav-links">
+    <li><a href="#contacto">SE ANFITRIÓN</a></li>
+    <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
+    <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
+  </ul>
+  <a href="#propietarios" class="btn btn-nav">Soy propietario</a>
+</div>
+
 
 <section id="inquilino-perfecto" class="banner">
   <div class="banner-content">
