--- a/index.html
+++ b/index.html
@@ -1,101 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BAIROOM</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-  <!-- CABECERA NAV -->
-<div class="nav-container">
-  <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-nav" />
-  <ul class="nav-links">
-    <li><a href="#contacto">SE ANFITRIÓN</a></li>
-    <li><a href="#ventajas">POR QUÉ BAIROOM</a></li>
-    <li><a href="#propiedades">VIVIENDAS GESTIONADAS</a></li>
-  </ul>
-  <a href="#propietarios" class="btn btn-nav">Soy propietario</a>
-</div>
-
-
-<section id="inquilino-perfecto" class="banner">
-  <div class="banner-content">
-    <div class="texto">
-      <h2>ALQUILA TU VIVIENDA SIN PREOCUPACIONES</h2>
-      <hr />
-      <p><strong>Seremos tu inquilino perfecto.</strong></p>
-      <p>
-        Nos hacemos cargo de todas las reparaciones, te aseguramos el pago por ADELANTADO de la mensualidad,
-        entre otras muchísimas más ventajas.
-      </p>
-      <a href="#contacto" class="btn btn-claro">CONTÁCTANOS</a>
-    </div>
-    <div class="imagen">
-      <img src="foto-habitacion.jpg" alt="Habitación moderna gestionada por Bairoom" />
-    </div>
+<header class="navbar">
+  <div class="nav-container">
+    <div class="logo">LOGO</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">SE ANFITRIÓN</a></li>
+        <li><a href="#">POR QUÉ BAIROOM</a></li>
+        <li><a href="#">PROPIEDADES</a></li>
+      </ul>
+    </nav>
   </div>
-</section>
-
-  <section id="ventajas">
-    <h2>¿Por qué elegirnos?</h2>
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-mini" />
-
-    <div class="ventajas-grid">
-      <div class="ventaja">
-        <img src="icons/reparaciones.png" alt="Icono reparaciones" />
-        <div>
-          <h3>Servicio de reparaciones</h3>
-          <p>Contamos con técnicos especializados que acuden en menos de 24h. Todo corre por nuestra cuenta.</p>
-        </div>
-      </div>
-
-      <div class="ventaja">
-        <img src="icons/ruido.png" alt="Icono ruido" />
-        <div>
-          <h3>Control de ruido</h3>
-          <p>Instalamos dispositivos Roomonitor que controlan los niveles de ruido 24/7 en cada estancia.</p>
-        </div>
-      </div>
-
-      <div class="ventaja">
-        <img src="icons/tiempo.png" alt="Icono tiempo" />
-        <div>
-          <h3>Ahorro de tiempo</h3>
-          <p>Nos ocupamos de todo tipo de incidencias. Tú solo cobras la renta mensual, sin preocupaciones.</p>
-        </div>
-      </div>
-
-      <div class="ventaja">
-        <img src="icons/pagos.png" alt="Icono seguridad pagos" />
-        <div>
-          <h3>Seguridad en los pagos</h3>
-          <p>Tramitamos seguros de impago. Incluso podemos adelantar meses de fianza o depósito si se necesita.</p>
-        </div>
-      </div>
-
-      <div class="ventaja">
-        <img src="icons/revalorizacion.png" alt="Icono revalorización" />
-        <div>
-          <h3>Revalorización del hogar</h3>
-          <p>Invertimos en tu propiedad: reformas, pintura, tarimas... lo que necesites para aumentar su valor.</p>
-        </div>
-      </div>
-
-      <div class="ventaja">
-        <img src="icons/limpio.png" alt="Icono limpieza" />
-        <div>
-          <h3>Servicio de limpieza</h3>
-          <p>Una persona acude semanalmente y puede enviarte vídeos del estado de la vivienda si lo deseas.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Bairoom | Contacto: <a href="mailto:jesusbailensanchez@gmail.com">jesusbailensanchez@gmail.com</a></p>
-  </footer>
-</body>
-</html>
-
+</header>
