--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<header class="navbar">
+<<header class="navbar">
   <div class="nav-container">
-    <div class="logo">LOGO</div>
+    <div class="logo">
+      <img src="logo-bairoom.png" alt="Logo Bairoom">
+    </div>
     <nav>
       <ul class="nav-links">
         <li><a href="#">SE ANFITRIÓN</a></li>
