--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<<header class="navbar">
+<header class="navbar">
   <div class="nav-container">
-    <div class="logo">
-      <img src="logo-bairoom.png" alt="Logo Bairoom">
-    </div>
+    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-img">
     <nav>
       <ul class="nav-links">
         <li><a href="#">SE ANFITRIÓN</a></li>
-        <li><a href="#">POR QUÉ BAIROOM</a></li>
+        <li><a href="#">PQ BAIROOM</a></li>
         <li><a href="#">PROPIEDADES</a></li>
       </ul>
     </nav>
+  </div>
+
+  <div class="hero-text">
+    <h1>Alquiler seguro<br>de inmuebles.</h1>
+    <p>
+      En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.<br>
+      Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo.<br>
+      Sin impagos. Sin gestiones. Sin complicaciones.
+    </p>
   </div>
 </header>
