--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
-<header class="navbar">
-  <div class="nav-container">
-    <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-img">
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#">SE ANFITRIÓN</a></li>
-        <li><a href="#">PQ BAIROOM</a></li>
-        <li><a href="#">PROPIEDADES</a></li>
-      </ul>
-    </nav>
-  </div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bairoom</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-  <div class="hero-text">
-    <h1>Alquiler seguro<br>de inmuebles.</h1>
-    <p>
-      En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.<br>
-      Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo.<br>
-      Sin impagos. Sin gestiones. Sin complicaciones.
-    </p>
-  </div>
-</header>
+  <!-- CABECERA -->
+  <header class="navbar">
+    <div class="navbar-container">
+      <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
+      <nav class="nav-links">
+        <a href="#">SE ANFITRIÓN</a>
+        <a href="#">PQ BAIROOM</a>
+        <a href="#">PROPIEDADES</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- SECCIÓN HERO -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Alquiler seguro<br>de inmuebles.</h1>
+      <p>
+        En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.<br>
+        Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo.<br>
+        Sin impagos. Sin gestiones. Sin complicaciones.
+      </p>
+    </div>
+  </section>
+
+</body>
+</html>
