--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
       <nav class="nav-links">
         <a href="#">SE ANFITRIÓN</a>
-        <a href="#">PQ BAIROOM</a>
+        <a href="#">POR QUÉ BAIROOM</a>
         <a href="#">PROPIEDADES</a>
       </nav>
     </div>
