--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bairoom</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-
   <!-- CABECERA -->
   <header class="navbar">
     <div class="navbar-container">
@@ -21,17 +19,16 @@
     </div>
   </header>
 
-  <!-- SECCIÓN HERO -->
+  <!-- CONTENIDO -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Alquiler seguro<br>de inmuebles.</h1>
+      <h1>Alquiler seguro<br />de inmuebles.</h1>
       <p>
-        En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.<br>
-        Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo.<br>
+        En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones. <br />
+        Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo. <br />
         Sin impagos. Sin gestiones. Sin complicaciones.
       </p>
     </div>
   </section>
-
 </body>
 </html>
