--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
       </p>
     </div>
   </section>
+
+  <!-- SECCIÓN PROPIETARIOS -->
+<section class="propietarios">
+  <div class="propietarios-container">
+    <div class="propietarios-img"></div>
+    <div class="propietarios-texto">
+      <h2>Seguridad máxima<br>para propietarios.</h2>
+      <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
+      <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
