--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 
   <!-- SECCIÓN PROPIETARIOS -->
 <section class="propietarios">
-  <div class="propietarios-container">
-    <div class="propietarios-img"></div>
-    <div class="propietarios-texto">
-      <h2>Seguridad máxima<br>para propietarios.</h2>
-      <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
-      <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
-    </div>
+  <div class="propietarios-img"></div>
+  <div class="propietarios-content">
+    <h2>Seguridad máxima<br>para propietarios.</h2>
+    <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
+    <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
+  </div>
+</section>
+
   </div>
 </section>
 
