--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -9,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <!-- CABECERA -->
   <header class="navbar">
     <div class="navbar-container">
@@ -21,7 +21,7 @@
     </div>
   </header>
 
-  <!-- CONTENIDO -->
+  <!-- SECCIÓN HERO -->
   <section class="hero">
     <div class="hero-content">
       <h1>Alquiler seguro<br />de inmuebles.</h1>
@@ -34,17 +34,15 @@
   </section>
 
   <!-- SECCIÓN PROPIETARIOS -->
-<section class="propietarios">
-  <div class="propietarios-img"></div>
-  <div class="propietarios-content">
-    <h2>Seguridad máxima<br>para propietarios.</h2>
-    <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
-    <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
-  </div>
-</section>
-
-  </div>
-</section>
+  <section class="propietarios">
+    <div class="propietarios-img"></div>
+    <div class="propietarios-content">
+      <h2>Seguridad máxima<br>para propietarios.</h2>
+      <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
+      <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
+    </div>
+  </section>
 
 </body>
 </html>
+
