--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
     </div>
   </section>
 
+ <!-- SECCIÓN VENTAJAS DE BAIROOM -->
+<section class="propietarios">
+  <div class="propietarios-img" style="background-image: url('foto-ventajas.jpg');"></div>
+  <div class="propietarios-content">
+    <h2>Ventajas de Bairoom.</h2>
+    <p><strong>Nos diferenciamos por ofrecer una gestión profesional, cercana y sin complicaciones para propietarios exigentes.</strong></p>
+    <p>Con Bairoom disfrutarás de pagos puntuales, cero gestiones, y un trato personalizado que garantiza tranquilidad y rentabilidad desde el primer día.</p>
+  </div>
+</section>
+
 </body>
 </html>
 
