--- a/index.html
+++ b/index.html
@@ -44,14 +44,19 @@
   </section>
 
  <!-- SECCIÓN VENTAJAS DE BAIROOM -->
-<section class="propietarios">
-  <div class="propietarios-img" style="background-image: url('foto-ventajas.jpg');"></div>
-  <div class="propietarios-content">
-    <h2>Ventajas de Bairoom.</h2>
-    <p><strong>Nos diferenciamos por ofrecer una gestión profesional, cercana y sin complicaciones para propietarios exigentes.</strong></p>
-    <p>Con Bairoom disfrutarás de pagos puntuales, cero gestiones, y un trato personalizado que garantiza tranquilidad y rentabilidad desde el primer día.</p>
+<!-- SECCIÓN: Ventajas de Bairoom -->
+<section class="ventajas">
+  <div class="ventajas-content">
+    <h2>Ventajas de Bairoom</h2>
+    <p class="subtitulo">Una nueva forma de alquilar sin preocupaciones.</p>
+
+    <!-- Aquí irán las ventajas con iconos -->
+    <div class="ventajas-grid">
+      <!-- Añadir aquí tus bloques de ventaja -->
+    </div>
   </div>
 </section>
+
 
 </body>
 </html>
