--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 
-  <!-- CABECERA -->
-  <header class="navbar">
+   <header class="navbar">
     <div class="navbar-container">
       <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
       <nav class="nav-links">
@@ -20,9 +19,7 @@
       </nav>
     </div>
   </header>
-
-  <!-- SECCIÓN HERO -->
-  <section class="hero">
+ <section class="hero">
     <div class="hero-content">
       <h1>Alquiler seguro<br />de inmuebles.</h1>
       <p>
@@ -32,6 +29,7 @@
       </p>
     </div>
   </section>
+
 
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
@@ -43,19 +41,15 @@
     </div>
   </section>
 
- <!-- SECCIÓN VENTAJAS DE BAIROOM -->
-<!-- SECCIÓN: Ventajas de Bairoom -->
-<section class="ventajas">
-  <div class="ventajas-content">
-    <h2>Ventajas de Bairoom</h2>
-    <p class="subtitulo">Una nueva forma de alquilar sin preocupaciones.</p>
-
-    <!-- Aquí irán las ventajas con iconos -->
-    <div class="ventajas-grid">
-      <!-- Añadir aquí tus bloques de ventaja -->
+  
+  <section class="ventajas">
+    <div class="ventajas-img"></div>
+    <div class="ventajas-content">
+      <h2>Ventajas de Bairoom</h2>
+      <p><strong>Conoce por qué cada vez más propietarios confían en nosotros.</strong></p>
+      <p>A continuación te mostramos los beneficios de contar con Bairoom: tranquilidad, rentabilidad y cero preocupaciones.</p>
     </div>
-  </div>
-</section>
+  </section>
 
 
 </body>
