--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-   <header class="navbar">
+  <!-- CABECERA -->
+  <header class="navbar">
     <div class="navbar-container">
       <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
       <nav class="nav-links">
@@ -19,7 +20,9 @@
       </nav>
     </div>
   </header>
- <section class="hero">
+
+  <!-- HERO -->
+  <section class="hero">
     <div class="hero-content">
       <h1>Alquiler seguro<br />de inmuebles.</h1>
       <p>
@@ -29,7 +32,6 @@
       </p>
     </div>
   </section>
-
 
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
@@ -41,16 +43,25 @@
     </div>
   </section>
 
-  
+  <!-- SECCIÓN VENTAJAS -->
   <section class="ventajas">
-    <div class="ventajas-img"></div>
     <div class="ventajas-content">
       <h2>Ventajas de Bairoom</h2>
       <p><strong>Conoce por qué cada vez más propietarios confían en nosotros.</strong></p>
       <p>A continuación te mostramos los beneficios de contar con Bairoom: tranquilidad, rentabilidad y cero preocupaciones.</p>
     </div>
-  </section>
 
+    <!-- Aquí puedes insertar los iconos -->
+    <div class="ventajas-iconos">
+      <!-- Ejemplo de icono -->
+      <!--
+      <div class="ventaja">
+        <img src="icono1.svg" alt="Tranquilidad">
+        <p>Tranquilidad total</p>
+      </div>
+      -->
+    </div>
+  </section>
 
 </body>
 </html>
