--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
-    <div class="propietarios-img"></div>
     <div class="propietarios-content">
       <h2>Seguridad máxima<br>para propietarios.</h2>
       <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
@@ -51,18 +50,11 @@
       <p>A continuación te mostramos los beneficios de contar con Bairoom: tranquilidad, rentabilidad y cero preocupaciones.</p>
     </div>
 
-    <!-- Aquí puedes insertar los iconos -->
+    <!-- Espacio para iconos -->
     <div class="ventajas-iconos">
-      <!-- Ejemplo de icono -->
-      <!--
-      <div class="ventaja">
-        <img src="icono1.svg" alt="Tranquilidad">
-        <p>Tranquilidad total</p>
-      </div>
-      -->
+      <!-- Inserta aquí tus ventajas -->
     </div>
   </section>
 
 </body>
 </html>
-
