--- a/index.html
+++ b/index.html
@@ -43,18 +43,65 @@
   </section>
 
   <!-- SECCIÓN VENTAJAS -->
-  <section class="ventajas">
-    <div class="ventajas-content">
-      <h2>Ventajas de Bairoom</h2>
-      <p><strong>Conoce por qué cada vez más propietarios confían en nosotros.</strong></p>
-      <p>A continuación te mostramos los beneficios de contar con Bairoom: tranquilidad, rentabilidad y cero preocupaciones.</p>
-    </div>
+<section class="ventajas">
+  <div class="ventajas-content">
+    <h2>Ventajas de Bairoom</h2>
+    <p><strong>Conoce por qué cada vez más propietarios confían en nosotros.</strong></p>
 
-    <!-- Espacio para iconos -->
-    <div class="ventajas-iconos">
-      <!-- Inserta aquí tus ventajas -->
+    <div class="ventajas-grid">
+
+      <div class="ventaja-item">
+        <img src="img/reparaciones.png" alt="Reparaciones">
+        <div>
+          <h3>Servicio de reparaciones</h3>
+          <p>Contamos con un equipo de reparaciones para cualquier incidente. Un técnico acudirá en menos de 24h sin coste para ti.</p>
+        </div>
+      </div>
+
+      <div class="ventaja-item">
+        <img src="img/ruido.png" alt="Ruido">
+        <div>
+          <h3>Control de ruido</h3>
+          <p>Instalamos Roomonitor en cada habitación para monitorizar el ruido 24/7 y evitar conflictos con la comunidad.</p>
+        </div>
+      </div>
+
+      <div class="ventaja-item">
+        <img src="img/tiempo.png" alt="Tiempo">
+        <div>
+          <h3>Ahorro de tiempo</h3>
+          <p>Nos encargamos de todo. Solo te preocupas de recibir el ingreso entre los días 1-5 de cada mes.</p>
+        </div>
+      </div>
+
+      <div class="ventaja-item">
+        <img src="img/pagos.png" alt="Pagos">
+        <div>
+          <h3>Seguridad en los pagos</h3>
+          <p>Nos encargamos del seguro de impagos y, si lo necesitas, te adelantamos parte de la fianza para mayor tranquilidad.</p>
+        </div>
+      </div>
+
+      <div class="ventaja-item">
+        <img src="img/revalorizacion.png" alt="Revalorización">
+        <div>
+          <h3>Revalorización del hogar</h3>
+          <p>Invertimos en la vivienda para aumentar su valor: reformas, tarimas, pintura, etc. Todos los gastos corren de nuestra cuenta.</p>
+        </div>
+      </div>
+
+      <div class="ventaja-item">
+        <img src="img/limpio.png" alt="Limpieza">
+        <div>
+          <h3>Servicio de limpieza</h3>
+          <p>Una persona encargada acude semanalmente y nos informa del estado del inmueble mediante vídeos.</p>
+        </div>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
 </body>
 </html>
