--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     <p><strong>Conoce por qué cada vez más propietarios confían en nosotros.</strong></p>
 
     <div class="ventajas-grid">
-
       <div class="ventaja-item">
         <img src="img/reparaciones.png" alt="Reparaciones">
         <div>
@@ -67,7 +66,7 @@
       </div>
 
       <div class="ventaja-item">
-        <img src="img/tiempo.png" alt="Tiempo">
+        <img src="img/tiempo.png" alt="Ahorro de tiempo">
         <div>
           <h3>Ahorro de tiempo</h3>
           <p>Nos encargamos de todo. Solo te preocupas de recibir el ingreso entre los días 1-5 de cada mes.</p>
@@ -75,7 +74,7 @@
       </div>
 
       <div class="ventaja-item">
-        <img src="img/pagos.png" alt="Pagos">
+        <img src="img/pagos.png" alt="Pagos seguros">
         <div>
           <h3>Seguridad en los pagos</h3>
           <p>Nos encargamos del seguro de impagos y, si lo necesitas, te adelantamos parte de la fianza para mayor tranquilidad.</p>
@@ -97,10 +96,10 @@
           <p>Una persona encargada acude semanalmente y nos informa del estado del inmueble mediante vídeos.</p>
         </div>
       </div>
-
     </div>
   </div>
 </section>
+
 
 
 </body>
