--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
     <div class="ventajas-grid">
       <div class="ventaja-item">
-        <img src="img/reparaciones.png" alt="Reparaciones">
+       <img src="icons/reparaciones.png" alt="Reparaciones">
+
         <div>
           <h3>Servicio de reparaciones</h3>
           <p>Contamos con un equipo de reparaciones para cualquier incidente. Un técnico acudirá en menos de 24h sin coste para ti.</p>
