--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="ventaja-item">
-     <img src="icons/reparaciones.png" alt="Reparaciones">
+   <img src="icons/ruido.png" alt="Ruido">
         <div>
           <h3>Control de ruido</h3>
           <p>Instalamos Roomonitor en cada habitación para monitorizar el ruido 24/7 y evitar conflictos con la comunidad.</p>
