--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
     <div class="ventajas-grid">
       <div class="ventaja-item">
-       <img src="icons/reparaciones.png" alt="Reparaciones">
-
+        <img src="img/reparaciones.png" alt="Reparaciones">
         <div>
           <h3>Servicio de reparaciones</h3>
           <p>Contamos con un equipo de reparaciones para cualquier incidente. Un técnico acudirá en menos de 24h sin coste para ti.</p>
@@ -58,7 +57,7 @@
       </div>
 
       <div class="ventaja-item">
-   <img src="icons/ruido.png" alt="Ruido">
+        <img src="img/ruido.png" alt="Ruido">
         <div>
           <h3>Control de ruido</h3>
           <p>Instalamos Roomonitor en cada habitación para monitorizar el ruido 24/7 y evitar conflictos con la comunidad.</p>
@@ -66,7 +65,7 @@
       </div>
 
       <div class="ventaja-item">
-       <img src="icons/tiempo.png" alt="Ahorro de tiempo">
+        <img src="img/tiempo.png" alt="Ahorro de tiempo">
         <div>
           <h3>Ahorro de tiempo</h3>
           <p>Nos encargamos de todo. Solo te preocupas de recibir el ingreso entre los días 1-5 de cada mes.</p>
@@ -74,7 +73,7 @@
       </div>
 
       <div class="ventaja-item">
-      <img src="icons/pagos.png" alt="Pagos seguros">
+        <img src="img/pagos.png" alt="Pagos seguros">
         <div>
           <h3>Seguridad en los pagos</h3>
           <p>Nos encargamos del seguro de impagos y, si lo necesitas, te adelantamos parte de la fianza para mayor tranquilidad.</p>
@@ -82,23 +81,24 @@
       </div>
 
       <div class="ventaja-item">
-      <img src="icons/revalorizacion.png" alt="Revalorización">
+        <img src="img/revalorizacion.png" alt="Revalorización del hogar">
         <div>
           <h3>Revalorización del hogar</h3>
-          <p>Invertimos en la vivienda para aumentar su valor: reformas, tarimas, pintura, etc. Todos los gastos corren de nuestra cuenta.</p>
+          <p>Invertimos en la vivienda para aumentar su valor. Reformas, pintura, tarima... todos los gastos corren por nuestra cuenta.</p>
         </div>
       </div>
 
       <div class="ventaja-item">
-        <img src="icons/limpio.png" alt="Limpieza">
+        <img src="img/limpio.png" alt="Servicio de limpieza">
         <div>
           <h3>Servicio de limpieza</h3>
-          <p>Una persona encargada acude semanalmente y nos informa del estado del inmueble mediante vídeos.</p>
+          <p>Una persona acude semanalmente y nos informa del estado del inmueble mediante vídeos.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
