--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- CABECERA -->
   <header class="navbar">
     <div class="navbar-container">
-      <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo" />
+      <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-white" />
       <nav class="nav-links">
         <a href="#">SE ANFITRIÓN</a>
         <a href="#">POR QUÉ BAIROOM</a>
