--- a/index.html
+++ b/index.html
@@ -98,6 +98,36 @@
     </div>
   </div>
 </section>
+<section class="propiedades">
+  <div class="propiedades-content">
+    <h2>Propiedades gestionadas</h2>
+    <p>Estas son algunas de las viviendas que gestionamos de forma integral.</p>
+
+    <div class="grid-propiedades">
+      <!-- Tarjeta individual -->
+      <div class="card-propiedad">
+        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
+        <div class="info">
+          <h3>Calle de Alburquerque 14</h3>
+          <div class="iconos">
+            <span>🛏 8</span>
+            <span>🚿 3</span>
+            <span>📐 200 m²</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Repite este bloque por propiedad -->
+      <!-- Ejemplo:
+      <div class="card-propiedad">...</div>
+      -->
+    </div>
+
+    <div class="ver-todas">
+      <a href="#" class="btn-verde">Ver todas las propiedades</a>
+    </div>
+  </div>
+</section>
 
 
 
