--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="propiedades-content">
     <h2>Propiedades gestionadas</h2>
    
-
+ <!-- Propiedad 1 -->
     <div class="grid-propiedades">
       <!-- Tarjeta individual -->
       <div class="card-propiedad">
@@ -117,12 +117,66 @@
         </div>
       </div>
 
-      <!-- Repite este bloque por propiedad -->
-      <!-- Ejemplo:
-      <div class="card-propiedad">...</div>
-      -->
-    </div>
+    <!-- Propiedad 2-->
 
+ <div class="grid-propiedades">
+      <!-- Tarjeta individual -->
+      <div class="card-propiedad">
+        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
+        <div class="info">
+          <h3>Calle Albello, Elche</h3>
+          <div class="iconos">
+            <span>🛏3</span>
+            <span>🚿 2 </span>
+            <span>📐 90 m²</span>
+          </div>
+        </div>
+      </div>
+
+ <!-- Propiedad 3 -->
+    <div class="grid-propiedades">
+      <!-- Tarjeta individual -->
+      <div class="card-propiedad">
+        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
+        <div class="info">
+          <h3>Calle Albello, Elche</h3>
+          <div class="iconos">
+            <span>🛏3</span>
+            <span>🚿 2 </span>
+            <span>📐 90 m²</span>
+          </div>
+        </div>
+      </div>
+ <!-- Propiedad 4 -->
+       <div class="grid-propiedades">
+      <!-- Tarjeta individual -->
+      <div class="card-propiedad">
+        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
+        <div class="info">
+          <h3>Calle Albello, Elche</h3>
+          <div class="iconos">
+            <span>🛏3</span>
+            <span>🚿 2 </span>
+            <span>📐 90 m²</span>
+          </div>
+        </div>
+      </div>
+ <!-- Propiedad 1 -->
+          <div class="grid-propiedades">
+      <!-- Tarjeta individual -->
+      <div class="card-propiedad">
+        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
+        <div class="info">
+          <h3>Calle Albello, Elche</h3>
+          <div class="iconos">
+            <span>🛏3</span>
+            <span>🚿 2 </span>
+            <span>📐 90 m²</span>
+          </div>
+        </div>
+      </div>
+
+    
     <div class="ver-todas">
       <a href="#" class="btn-verde">Ver todas las propiedades</a>
     </div>
